--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "First REST-full api.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --inspect server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "aleksandrlepin",
