--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,14 @@
     "babel-plugin-import": "^1.9.1",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "^2.0.4",
+    "react-scripts": "^2.1.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-router": "^2.1.2",
