--- a/client/src/.eslintrc.json
+++ b/client/src/.eslintrc.json
@@ -30,7 +30,9 @@
         "no-extra-semi": 0,
         "func-names": 0,
         "semi": 0,
-        "no-spaced-func": [ 0, "never" ]
+        "no-spaced-func": [ 0, "never" ],
+        "space-before-function-paren": 0,
+        "no-unused-expressions": [1, { "allowShortCircuit": true, "allowTernary": true }]
     },
     "parser": "babel-eslint",
     "extends": [
