--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,12 +14,20 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "nodemon",
+      "name": "Node: launch Nodemon",
       "runtimeExecutable": "nodemon",
       "program": "${workspaceFolder}/server.js",
       "restart": true,
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Node: attach to Nodemon",
+      "processId": "${command:PickProcess}",
+      "restart": true,
+      "protocol": "inspector",
     },
     {
       "type": "node",
