--- a/client/src/.eslintrc.json
+++ b/client/src/.eslintrc.json
@@ -20,7 +20,7 @@
         "no-unused-vars": "warn",
         "constructor-super": "warn",
         "valid-typeof": "warn",
-        "indent": ["warn", 2],
+        "indent": ["warn", 2, { "SwitchCase": 1 }],
         "arrow-parens": 0,
         "react/sort-comp": 0,
         "import/prefer-default-export": 0,
