--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/styles -o src/styles",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/styles -o src/styles --watch --recursive",
-    "start-js": "react-app-rewired start",
+    "start-js": "HTTPS=true react-app-rewired start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-app-rewired build",
     "build": "npm-run-all build-css build-js",
