--- a/client/src/.eslintrc.json
+++ b/client/src/.eslintrc.json
@@ -19,6 +19,7 @@
         "no-unreachable": "warn",
         "no-unused-vars": "warn",
         "constructor-super": "warn",
+        "consistent-return": 0,
         "valid-typeof": "warn",
         "indent": ["warn", 2, { "SwitchCase": 1 }],
         "arrow-parens": 0,
@@ -32,7 +33,7 @@
         "semi": 0,
         "no-spaced-func": [ 0, "never" ],
         "space-before-function-paren": 0,
-        "no-unused-expressions": [1, { "allowShortCircuit": true, "allowTernary": true }],
+        "no-unused-expressions": ["warn", { "allowShortCircuit": true, "allowTernary": true }],
         "no-case-declarations": 0,
         "comma-dangle": ["error", {
             "arrays": "always-multiline",
