--- a/client/src/.eslintrc.json
+++ b/client/src/.eslintrc.json
@@ -46,7 +46,12 @@
             "components": [ "Link" ],
             "specialLink": [ "to" ]
         }],
-        "object-curly-newline": ["error", { "multiline": true }]
+        "object-curly-newline": [0, {
+            "ObjectExpression": { "multiline": true },
+            "ObjectPattern": { "multiline": true },
+            "ImportDeclaration": "never",
+            "ExportDeclaration": { "multiline": true, "minProperties": 3 }
+        }]
     },
     "parser": "babel-eslint",
     "extends": [
