--- a/client/src/.eslintrc.json
+++ b/client/src/.eslintrc.json
@@ -51,7 +51,9 @@
             "ObjectPattern": { "multiline": true },
             "ImportDeclaration": "never",
             "ExportDeclaration": { "multiline": true, "minProperties": 3 }
-        }]
+        }],
+        "no-underscore-dangle": 0,
+        "array-bracket-spacing": 0
     },
     "parser": "babel-eslint",
     "extends": [
