--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.4.0",
     "morgan": "^1.9.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
