--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.10.0",
     "babel-plugin-import": "^1.9.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
