--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,9 @@
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "ramda": "^0.26.1",
-    "react": "^16.5.2",
+    "react": "^16.8.6",
     "react-app-rewired": "^1.6.2",
+    "react-avatar-editor": "^11.0.7",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
