--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "aleksandrlepin",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^6.12.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.14.0",
