--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "First REST-full api.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r dotenv/config server.js",
+    "start": "node -r dotenv/config server.js",
+    "dev": "nodemon -r dotenv/config server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "aleksandrlepin",
