--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node -r dotenv/config server.js",
     "dev": "nodemon -r dotenv/config server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create-db": "node ./db/createDb.js"
   },
   "author": "aleksandrlepin",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
     "pg": "^8.0.0",
+    "pgtools": "^0.3.0",
     "ramda": "^0.26.1",
     "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
